1.3 - 2006.05.29
 * New Features:
   * mutagen.File: Automatic file type detection.
   * mutagen.ogg: Generic Ogg stream parsing. (#612)
   * mutagen.oggflac: Read/tag Ogg FLAC files.
   * mutagen.oggvorbis no longer depends on pyvorbis.
   * ID3: SYLT support. (#672)

1.2 - 2006.04.23
 * Bug Fixes:
   * MP3: Load files with zeroed Xing headers. (#626)
   * ID3: Upgrade ID3v2.2 PIC tags to ID3v2.4 APIC tags properly.
   * Tests exit with non-zero status if any have failed.
   * Full dict protocol support for VCommentDict, FileType, and APEv2 objects.

 * New features:
   * mutagen.oggvorbis gives pyvorbis a Mutagen-like API.
   * mutagen.easyid3 makes simple ID3 tag changes easier.
   * A brief TUTORIAL was added.

 * Tools:
   * mid3iconv, a clone of id3iconv, was added by Emfox Zhou. (#605)

1.1 - 2006.04.04
 * ID3:
  * Frame and Spec objects are not hashable.
  * COMM, USER: Accept non-ASCII (completely invalid) language codes.
  * Enable redundant data length bit for compressed frames.

1.0 - 2006.03.13
 * mutagen.FileType, an abstract container for tags and stream information.
 * MP3: A new FileType subclass for MPEG audio files.
 * FLAC:
  * Add FLAC#delete.
  * Raise correct exception when saving to a non-FLAC file.
  * FLAC#vc is deprecated in favor of FLAC#tags.
 * VComment (used by FLAC):
  * VComment#clear to clear all tags.
  * VComment#as_dict to return a dict of the tags.
 * ID3:
  * Fix typos in PRIV#_pprint, OWNE#_pprint, UFID#_pprint.
 * mutagen-pony: Try finding lengths as well as tags.
 * mutagen-inspect: Output stream information with tags.

0.9 - 2006.02.21
 * Initial release.