@@ -14,6 +14,7 @@ This is based off of the following references:
    http://www.id3.org/id3v2.4.0-frames.txt
    http://www.id3.org/id3v2.3.0.html
    http://www.id3.org/id3v2-00.txt
+   http://www.id3.org/id3v1.html
 
 Its largest deviation from the above (versions 2.3 and 2.2) is that it
 will not interpret the / characters as a separator, and will almost
